# toylisp

./: .gitignore  devenv.nix  pyproject.toml
tests/: test_interpreter.py  test_parser.py  test_token_stream.py
toylisp/: input_stream.py  interpreter.py  main.py  parser.py  token_stream.py
