[tool.poetry]
name = "toylisp"
version = "0.1.0"
description = "Toy lisp interpreter"
authors = ["Maksymilian Jodłowski <maksymilian.jodlowski@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
